# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-expr"
description = "Logical plan and expression representation for DataFusion query engine"
keywords = ["datafusion", "logical", "plan", "expressions"]
readme = "README.md"
version = "43.0.0"
edition = "2021"

[lib]
name = "datafusion_expr"
path = "src/lib.rs"

[features]

[dependencies]


ahash = { version = "0.8", default-features = false, features = [
    "runtime-rng",
] }
arrow = { version = "53.3.0", features = [
    "prettyprint",
] }
arrow-array = { version = "53.3.0", default-features = false, features = [
    "chrono-tz",
] }
arrow-buffer = { version = "53.3.0", default-features = false }
chrono = { version = "0.4.38", default-features = false }
datafusion-common = "43.0.0"
datafusion-expr-common = "43.0.0"
datafusion-functions-aggregate-common = "43.0.0"
datafusion-functions-window-common = "43.0.0"
datafusion-physical-expr-common = "43.0.0"
indexmap = "2.0.0"
paste = "^1.0"
recursive = "0.1.1"
serde_json = "1"
sqlparser = { version = "0.51.0", features = ["visitor"] }
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.0"

[dev-dependencies]
ctor = "0.2.0"
env_logger = "0.11"
